Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -659,7 +659,7 @@
     "export-bill": "fattura di esportazione",
     "extra-file": "File aggiuntivo",
     "failed": "Fallito",
-    "fails": "Fallimenti",
+    "fails": "Errori",
     "families": "famiglie",
     "family": "Famiglia",
     "family-code": "Codice famiglia",
