--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1093,7 +1093,7 @@
     "new-invoice-line-p": "Możesz dodać produkt, naciskając przycisk produktu lub wpisując jego referencję lub kod kreskowy w polu kodu kreskowego. Lub naciśnij przycisk linii, aby dodać linię bez produktu.",
     "new-password": "Nowe hasło",
     "new-price": "Nowa cena",
-    "new-product": "Nuevo producto",
+    "new-product": "Nowy produkt",
     "new-refund": "Nowy zwrot",
     "new-subaccount": "Nowe subkonto",
     "new-supplier": "Nowy dostawca",
@@ -1548,7 +1548,7 @@
     "sort": "Sortowanie",
     "sort-by-balance-asc": "Sortuj według salda rosnąco",
     "sort-by-balance-desc": "Sortuj według salda malejąco",
-    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-asc": "Sortuj według kodu rosnąco",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Sortuj wg kolumny",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
