--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -42,7 +42,7 @@
     "accounting-items": "Partides contables",
     "accounting-lines-error": "Erro en les llínees de l'assentament contable",
     "accounting-plan": "Pla contable",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "El pla comptable ha de tenir com a mínim 2 nivells: comptes i subcomptes.",
     "accounting-possible-duplicated": "L'assentament està possiblement duplicat en aquest altre. Si no fora aixina, simplement canvia el concepte per evitar aquest missatge.",
     "accounting-reports": "Informes comptables",
     "accounting-within-regularization": "Ja hi ha una regularització d'impostos en aquest període. No es poden fer canvis.",
@@ -845,7 +845,7 @@
     "interest": "Interés",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitària",
-    "invalid-admin-username": "El nombre de usuario del administrador no es válido: debe tener entre 3 y 50 caracteres, sin espacios.",
+    "invalid-admin-username": "El nom d'usuari de l'administrador no és vàlid: ha de tenir entre 3 i 50 caràcters, sense espais.",
     "invalid-alphanumeric-code": "El codi introduït (%value%) no és vàlid. (%column%) ha de tindre entre %min% i %max% números o lletres.",
     "invalid-column-lenght": "La columna %column% ha de tindre entre %min% i %max% caràcters.",
     "invalid-date": "%date% no és una data vàlida.",
@@ -1459,7 +1459,7 @@
     "search": "Busca",
     "search-customer": "Search customer",
     "search-document": "Escribe el número de %doctype% para buscar.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Cerca en totes les pàgines del programa",
     "search-message": "Cercar missatge",
     "search-product": "Search product",
     "searching": "Buscant",
@@ -1551,7 +1551,7 @@
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Ordenar per columna",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-asc": "Ordenar per haver ascendent",
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar por fecha ascendente",
     "sort-by-date-desc": "Ordenar per data desc.",
@@ -1615,7 +1615,7 @@
     "subtract": "Restar",
     "subtract-stock": "Restar estoc",
     "success": "success",
-    "successive-tract": "tracte successiu",
+    "successive-tract": "Lliurament successiu",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma dels nets de les llínees del IVA deuria ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma dels totals del IVA de les llínees del IVA ha de ser: %lineTotalTax%",
