--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1809,7 +1809,7 @@
     "vat-document": "Documento de IVA",
     "vat-exception": "Exceção de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
-    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
+    "vat-number-not-valid": "%vat-number% não está registrado no VIES",
     "vat-number-not-vies": "O número '%vat-number%' não está registrado no sistema VIES",
     "vat-regime": "Regime de impostos",
     "VAT-register": "Registro de VAT",
