Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -597,7 +597,7 @@
     "error-write-cert": "Chyba při zapisování certifikátu",
     "errors": "Errores",
     "es_EC": "Španělština (Ekvádor)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-added-value": "Operace podléhající DPH",
     "es-operation-tax-ceuta-melilla": "Operace podléhá dani IPSI (Ceuta a Melilla)",
     "es-operation-tax-igic": "Operace podléhá IGIC (Kanárské ostrovy)",
     "es-operation-tax-other": "Operace nepodléhající výše uvedeným daním",
@@ -1809,7 +1809,7 @@
     "vat-document": "Documento",
     "vat-exception": "Excepción de IVA",
     "vat-number-is-short": "Číslo '%vat-number%' je příliš krátké",
-    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
+    "vat-number-not-valid": "%vat-number% není registrováno ve VIES",
     "vat-number-not-vies": "Číslo '%vat-number%' není registrováno v systému VIES",
     "vat-regime": "Régimen impuestos",
     "VAT-register": "Příhlášení k DPH",
