--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -165,7 +165,7 @@
     "barcode": "Còdic de barres",
     "bcc": "CCO",
     "become-sponsor": "Fes-te patrocinador",
-    "benefit-3-parties": "benefici a 3 parts",
+    "benefit-3-parties": "Operació amb benefici a tercers",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Direcció de facturació",
