Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1546,7 +1546,7 @@
     "software": "Software",
     "solution": "Solução",
     "sort": "Ordenar",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-asc": "Ordenar por saldo crescente",
     "sort-by-balance-desc": "Ordenar por saldo decrescente",
     "sort-by-code-asc": "Ordenar por código crescente",
     "sort-by-code-desc": "Ordenar por código decrescente",
