--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -600,7 +600,7 @@
     "es-operation-tax-added-value": "Umsatzsteuerpflichtige Leistung",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
     "es-operation-tax-igic": "Vorgang unterliegt dem IGIC (Kanarische Inseln)",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-other": "Vorgang nicht den oben genannten Steuern unterliegend",
     "es-tax-exception-art-14": "Spanien: N4 Nicht steuerpflichtig Art. 14 LIVA – Vorgänge im Zusammenhang mit Exporten",
     "es-tax-exception-art-7": "Spanien: N3 nicht steuerpflichtig Art. 7 LIVA – Nicht steuerpflichtige Vorgänge (Einlagen, Übertragung von UEA, Muster…)",
     "es-tax-exception-e1": "Spanien: Ausnahme nach Artikel 20 des Umsatzsteuergesetzes",
