--- a/Core/Translation/es_MX.json
+++ b/Core/Translation/es_MX.json
@@ -874,7 +874,7 @@
     "invoices": "Facturas",
     "invoices-cant-generate-new-docs": "Las facturas no pueden generar nuevos documentos",
     "ip": "IP",
-    "ip-banned": "Por motivos de seguridad se ha bloqueado temporalmente el acceso desde su IP.",
+    "ip-banned": "Por motivos de seguridad se ha bloqueado durante 10 minutos el acceso desde su IP.",
     "irpf": "ISR",
     "irpf-record-not-found": "Registro de IRPF %value%% no encontrado.",
     "irpf-subaccount-not-found": "Subcuenta de IRPF no encontrada",
