--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -874,7 +874,7 @@
     "invoices": "Invoices",
     "invoices-cant-generate-new-docs": "Invoices can't generate new documents",
     "ip": "IP",
-    "ip-banned": "For security reasons access from your IP has been temporarily blocked.",
+    "ip-banned": "For security reasons, access from your IP has been blocked for 10 minutes.",
     "irpf": "PIT",
     "irpf-record-not-found": "%value%% IRPF record not found.",
     "irpf-subaccount-not-found": "Income tax subaccount not found",
