Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1350,7 +1350,7 @@
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
     "qz-tray-connected": "QZ Tray conectado",
-    "qz-tray-connected-successfully": "Conectado ao QZ Tray com sucesso.",
+    "qz-tray-connected-successfully": "Ligado ao QZ Tray com sucesso.",
     "randomizer-generating-more-items": "Gerando mais itens...",
     "rate": "Tarifa",
     "rates": "Tarifas",
