--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1309,7 +1309,7 @@
     "print-ticket": "Print ticket",
     "print-works": "print-works",
     "print-works-description": "Imprimir descripció de treballs",
-    "print-works-price": "Imprimir preu de treballs",
+    "print-works-price": "Imprimir preu dels treballs",
     "print-works-quantity": "Imprimir quantitat de treballs",
     "print-works-reference": "Imprimir referència de treballs",
     "printed": "Imprès",
@@ -1558,7 +1558,7 @@
     "sort-by-debit-asc": "Ordenar por debe ascendente",
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-description-desc": "Ordenar per descripció descendent",
     "sort-by-price-asc": "Ordenar per preu ascendent",
     "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordenar per referència asc.",
