--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1350,7 +1350,7 @@
     "quantity-served": "Quantidade servida",
     "quantity-sold": "vendido-em-quantidade",
     "qz-tray-connected": "QZ Tray conectado",
-    "qz-tray-connected-successfully": "Conectado a QZ Tray correctamente.",
+    "qz-tray-connected-successfully": "Ligado ao QZ Tray com sucesso.",
     "randomizer-generating-more-items": "Gerando mais itens...",
     "rate": "Taxa",
     "rates": "Preços",
@@ -1809,7 +1809,7 @@
     "vat-document": "Documento",
     "vat-exception": "Exceção de IVA",
     "vat-number-is-short": "O número '%vat-number%' é muito curto",
-    "vat-number-not-valid": "%vat-number% no está registrado en el VIES",
+    "vat-number-not-valid": "%vat-number% não está registado no VIES",
     "vat-number-not-vies": "O número '%vat-number%' não está registado no sistema VIES",
     "vat-regime": "Regime de IVA",
     "VAT-register": "VAT registration",
