Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1546,7 +1546,7 @@
     "software": "Software",
     "solution": "Solución",
     "sort": "Orden",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-asc": "Seřadit podle zůstatku vzestupně",
     "sort-by-balance-desc": "Seřadit podle zůstatku sestupně",
     "sort-by-code-asc": "Ordenar por código ascendente",
     "sort-by-code-desc": "Seřadit podle kódu sestupně",
