--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1604,7 +1604,7 @@
     "subaccount-belongs-other-year": "Unterkonto 0 gehört zu einem anderen Geschäftsjahr.",
     "subaccount-irpf": "Konto für Abzüge",
     "subaccount-irpf-creditor": "Unterkonto für Einkaufsabzüge",
-    "subaccount-not-found": "Unterkonto 0 wurde nicht gefunden.",
+    "subaccount-not-found": "Unterkonto %code% wurde nicht gefunden.",
     "subaccount-purchases": "Unterkonto für Einkäufe",
     "subaccount-pyg-not-found": "Teil-Konto für Gewinn- und Verlustrechnung nicht gefunden",
     "subaccount-sales": "Verkaufskonto",
@@ -1615,7 +1615,7 @@
     "subtract": "Subtrahieren",
     "subtract-stock": "Bestand abziehen",
     "success": "Erfolg",
-    "successive-tract": "sukzessiver Abschnitt",
+    "successive-tract": "Aufeinanderfolgende Lieferung",
     "sum": "Summe",
     "sum-netos-line-tax-must-be": "Die Summe des Nettos der Mehrwertsteuerzeilen sollte 0 sein.",
     "sum-total-line-tax-must-be": "Die Summe der MwSt.-Summen der MwSt.-Zeilen sollte 0 sein.",
