--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1549,7 +1549,7 @@
     "sort-by-balance-asc": "Ordenatu saldoaren arabera (gorantz)",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
     "sort-by-code-asc": "Ordenar por código ascendente",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-code-desc": "Kodearen arabera beheranzko ordenean",
     "sort-by-column": "Zutabean sailkatu",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
     "sort-by-credit-desc": "Ordenatu kredituaren arabera (jaitsieran)",
@@ -1560,11 +1560,11 @@
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-price-desc": "Ordenatu prezioaren jaitsieran",
     "sort-by-ref-asc": "Erreferentziaren arabera sailkatu goranz",
     "sort-by-ref-desc": "Erreferentziaren arabera sailkatu beheranz",
     "sort-by-stock-asc": "Ordenar por stock ascendente",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-desc": "Stokuaren arabera beheranzko ordenean",
     "sorted-asc": "Gorantz sailkatuta",
     "sorted-desc": "Beherantz sailkatuta",
     "source": "Hornidura",
