--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1454,7 +1454,7 @@
     "save": "Salvar",
     "save-data": "Salvar dados",
     "save-filter": "Salvar Filtros",
-    "scan-usb-devices": "Escanear dispositivos USB",
+    "scan-usb-devices": "Digitalizar dispositivos USB",
     "sdk": "SDK",
     "search": "Pesquisar",
     "search-customer": "Procurar cliente",
