--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1454,7 +1454,7 @@
     "save": "Salve ",
     "save-data": "Guardar dados",
     "save-filter": "Salvar Filtros",
-    "scan-usb-devices": "Escanear dispositivos USB",
+    "scan-usb-devices": "Digitalizar dispositivos USB",
     "sdk": "SDK",
     "search": "Pesquisa",
     "search-customer": "Procurar cliente",
