--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -600,7 +600,7 @@
     "es-operation-tax-added-value": "es-operation-tax-added-value",
     "es-operation-tax-ceuta-melilla": "Operazione soggetta all'IPSI (Ceuta e Melilla)",
     "es-operation-tax-igic": "Operazione soggetta all'IGIC (Canarie)",
-    "es-operation-tax-other": "Altre operazioni fiscali",
+    "es-operation-tax-other": "Operazione non soggetta alle imposte sopra indicate",
     "es-tax-exception-art-14": "eccezione fiscale art. 14",
     "es-tax-exception-art-7": "eccezione fiscale-es-art-7",
     "es-tax-exception-e1": "Spagna: eccezione per l'articolo 20 della legge sull'IVA",
@@ -1615,7 +1615,7 @@
     "subtract": "Sottrarre",
     "subtract-stock": "Sottrarre stock",
     "success": "successo",
-    "successive-tract": "tratto successivo",
+    "successive-tract": "Consegna in serie",
     "sum": "Somma",
     "sum-netos-line-tax-must-be": "La somma della rete delle linee IVA dovrebbe essere: 0",
     "sum-total-line-tax-must-be": "La somma dei totali IVA delle righe IVA dovrebbe essere: 0",
