--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -447,6 +447,8 @@
     "default-to-company-email": "By default to the company email",
     "default-to-user-email": "By default to the user's email",
     "default-warehouse": "Default warehouse",
+    "default-to-config-email": "Default to configuration email.",
+    "always-to-config-email": "Always to configuration email.",
     "delete": "Remove",
     "delete-all": "Delete all",
     "delete-closing": "Eliminate closing account entries",
