fix: added validation

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -534,6 +534,7 @@
     "drag": "Drag",
     "dto": "Disc.",
     "dto-2": "Discount 2",
+    "duplicate-emails": "Email %email% is duplicated.",
     "duplicate-customer-name-or-cif": "A customer with the same name or VAT number exists",
     "duplicate-record": "Duplicated record",
     "duplicated-reference": "Reference '%reference%' duplicated",
@@ -851,6 +852,9 @@
     "invalid-date": "Invalid date %date%.",
     "invalid-date-there-are-invoices-after": "Invalid Date. There are already invoices dated after %date%",
     "invalid-date-there-are-invoices-before": "Invalid date. The date %date% is later than that of the following invoice.",
+    "invalid-to-email": "Invalid recipient email address: %email%",
+    "invalid-cc-email": "Invalid CC email address: %email%",
+    "invalid-bcc-email": "Invalid BCC email address: %email%",
     "invalid-iban": "Invalid IBAN: %iban%",
     "invalid-iso-code": "Invalid ISO code ''%iso-code%''.",
     "invalid-number": "Invalid number: %number%",
