--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -534,6 +534,7 @@
     "drag": "Arrastrar",
     "dto": "Dto.",
     "dto-2": "Dto. 2",
+    "duplicate-emails": "El email %email% está duplicado.",
     "duplicate-customer-name-or-cif": "Existe un cliente con el mismo nombre o CIF\/NIF",
     "duplicate-record": "Registro duplicado",
     "duplicated-reference": "Referencia '%reference%' duplicada",
@@ -851,6 +852,9 @@
     "invalid-date": "Fecha %date% no válida.",
     "invalid-date-there-are-invoices-after": "Fecha no válida: %date%. La factura %other% es posterior y sin embargo tiene fecha anterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
     "invalid-date-there-are-invoices-before": "Fecha no válida: %date%. La factura %other% es anterior a esta y sin embargo tiene fecha posterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
+    "invalid-to-email": "Dirección de email de destinatario no válida: %email%",
+    "invalid-cc-email": "Dirección de email de copia (CC) no válida: %email%",
+    "invalid-bcc-email": "Dirección de email de copia oculta (BCC) no válida: %email%",
     "invalid-iban": "IBAN no válido: %iban%",
     "invalid-iso-code": "Código ISO '%iso-code%' no válido",
     "invalid-number": "Número no válido: %number%",
