Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1548,7 +1548,7 @@
     "sort": "Orden",
     "sort-by-balance-asc": "Seřadit podle zůstatku vzestupně",
     "sort-by-balance-desc": "Seřadit podle zůstatku sestupně",
-    "sort-by-code-asc": "Ordenar por código ascendente",
+    "sort-by-code-asc": "Seřadit podle kódu vzestupně",
     "sort-by-code-desc": "Seřadit podle kódu sestupně",
     "sort-by-column": "Seřadit podle sloupce",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
@@ -1563,7 +1563,7 @@
     "sort-by-price-desc": "Seřadit podle ceny sestupně",
     "sort-by-ref-asc": "Seřadit podle reference vzestupně",
     "sort-by-ref-desc": "Seřadit podle reference sestupně",
-    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-asc": "Seřadit podle zásob vzestupně",
     "sort-by-stock-desc": "Seřadit podle zásob sestupně",
     "sorted-asc": "Seřazeno vzestupně",
     "sorted-desc": "Seřazeno sestupně",
