Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1459,7 +1459,7 @@
     "search": "Buscar",
     "search-customer": "Buscar cliente",
     "search-document": "Escribe el número de %doctype% para buscar.",
-    "search-in-all-pages": "Busca en todas las páginas del programa",
+    "search-in-all-pages": "Hledat na všech stránkách programu",
     "search-message": "Hledat zprávu",
     "search-product": "Buscar producto",
     "searching": "Hledání",
