--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -2,7 +2,7 @@
     "2fa": "2FA",
     "abbreviated": "Abreujat",
     "about": "Sobre",
-    "acc-concept-required": "Debes introducir primero el concepto del asiento",
+    "acc-concept-required": "Has d'introduir primer el concepte del seient",
     "accept": "Acceptar",
     "accept-all": "Aceptar tot",
     "accept-data": "Acceptar els canvis o l'operació",
