Solucionados los bugs con los tests.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -610,7 +610,7 @@
     "es-tax-exception-e5": "España: excepción por el artículo 25 de la Ley del IVA",
     "es-tax-exception-e6": "España: excepción por otra causa",
     "es-tax-exception-location-rules": "Španělsko: N2 Nepodléhá dani – Pravidla lokalizace služeb (články 69–70 LIVA, služby B2B v EU nebo mimo EU)",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Vnitrostátní operace osvobozené podle článku 10.1 zákona č. 20\/1991 o IGIC",
     "es-tax-exception-n5": "Operace osvobozené v souladu s článkem 25 zákona o IGIC",
     "es-tax-exception-passive-subject": "Španělsko: N6 Přenesení daňové povinnosti (čl. 84 LIVA)",
     "es-tax-regime-agrarian": "Zvláštní režim zemědělství, chovu zvířat a rybolovu",
