feat: implementado aplicar a documentos

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -62,6 +62,9 @@
     "add-user": "Add user",
     "additional-text": "Additional text",
     "address": "Address",
+    "address-applied-to-documents-successfully": "Address applied to %successes% documents successfully.",
+    "address-applied-to-documents-with-errors": "The operation was not completely successful. %failures% documents could not be modified, but %successes% documents were.",
+    "address-not-found": "Address not found",
     "addresses": "Addresses",
     "addresses-and-contacts": "Addresses and contacts",
     "admin": "Admin",
@@ -115,6 +118,7 @@
     "app-preferences": "App Preferences",
     "app-storage": "Storage",
     "applied-tax": "Applied tax",
+    "apply-to-documents": "Apply to documents",
     "apply": "Apply",
     "apply-to": "Apply to",
     "approve": "Approve",
