--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -62,6 +62,9 @@
     "add-user": "Añadir usuario",
     "additional-text": "Texto adicional",
     "address": "Dirección",
+    "address-applied-to-documents-successfully": "Dirección aplicada a %successes% documentos correctamente.",
+    "address-applied-to-documents-with-errors": "La operación no se completó correctamente. No se pudieron modificar %failures% documentos, pero sí se modificaron %successes%.",
+    "address-not-found": "Dirección no encontrada",
     "addresses": "Direcciones",
     "addresses-and-contacts": "Direcciones y contactos",
     "admin": "Administrador",
@@ -115,6 +118,7 @@
     "app-preferences": "Preferencias de aplicación",
     "app-storage": "Almacenamiento",
     "applied-tax": "Impuesto aplicado",
+    "apply-to-documents": "Aplicar a documentos",
     "apply": "Aplicar",
     "apply-to": "Aplicar a",
     "approve": "Aprobar",
