--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -1310,7 +1310,7 @@
     "print-works": "Drukuj prace",
     "print-works-description": "Drukuj opis prac",
     "print-works-price": "Drukuj cenę robót",
-    "print-works-quantity": "Drukuj ilość prac",
+    "print-works-quantity": "Drukuj liczbę prac",
     "print-works-reference": "Drukuj odniesienie do prac",
     "printed": "Wydrukowane",
     "printing-format": "Format druku",
@@ -1551,7 +1551,7 @@
     "sort-by-code-asc": "Sortuj według kodu rosnąco",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Sortuj wg kolumny",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-asc": "Sortuj według kredytu rosnąco",
     "sort-by-credit-desc": "Sortuj według kredytu malejąco",
     "sort-by-date-asc": "Sortuj wg daty rosnąco",
     "sort-by-date-desc": "Sortuj wg daty malejąco",
