feat: added tasaconv y totaleuros to listdocument

--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -1711,6 +1711,7 @@
     "to-report": "Informar",
     "today": "Hoy",
     "total": "Total",
+    "totaleuros": "Total Euros",
     "total-amount": "Suma total",
     "total-cost": "Coste total",
     "total-pending": "Total pendiente",
