--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1711,6 +1711,7 @@
     "to-report": "Report",
     "today": "Today",
     "total": "Total",
+    "totaleuros": "Total Euros",
     "total-amount": "Total amount",
     "total-cost": "Total cost",
     "total-pending": "Total pending",
