--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -599,7 +599,7 @@
     "es_EC": "Hiszpański (Ekwador)",
     "es-operation-tax-added-value": "Operacja podlega VAT",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-igic": "Operacja objęta IGIC (Wyspy Kanaryjskie)",
     "es-operation-tax-other": "Operacja niepodlegająca powyższym podatkom",
     "es-tax-exception-art-14": "Hiszpania: N4 Niepodlegające opodatkowaniu (art. 14 LIVA) – operacje związane z eksportem",
     "es-tax-exception-art-7": "wyjątek podatkowy ES - art. 7",
