Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -620,7 +620,7 @@
     "es-tax-regime-general": "Allgemeines Regime",
     "es-tax-regime-gold": "Besonderes Regime für Investmentgold",
     "es-tax-regime-group-entities": "Besonderes Regime der Unternehmensgruppe",
-    "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
+    "es-tax-regime-one-stop-shop-ioss": "es-Steuerregime One-Stop-Shop (IOSS)",
     "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
     "es-tax-regime-simplified": "Vereinfachtes Regime",
     "es-tax-regime-special-retail-traders": "Spanisches Steuerregime – Sonderregel für Einzelhändler",
