--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -139,7 +139,7 @@
     "august": "Agosto",
     "auth-token-invalid": "Klucz API jest nieprawidłowy",
     "authentication": "Uwierzytelnienie",
-    "auto": "Auto",
+    "auto": "Automatyczny",
     "auto-apply-to": "Automatycznie zastosuj do",
     "automatic": "Automatyczny",
     "available": "Dostępny",
@@ -1476,7 +1476,7 @@
     "select-plugin-zip-file": "Wybierz wtyczkę (zip):",
     "select-user": "Wybierz użytkownika",
     "selected-quantity": "Ilość wybrana",
-    "selector-number": "Wybieracz",
+    "selector-number": "Selektor",
     "send": "Wysłać",
     "send-anonymous-data": "Wyślij dane anonimowe",
     "send-audios": "Enviar audios",
