--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1101,7 +1101,7 @@
     "next": "Próximo",
     "nick": "usuario",
     "no": "Não",
-    "no-admin": "Não administrador",
+    "no-admin": "Sem administrador",
     "no-agent": "Sem agente",
     "no-data": "Sem dados",
     "no-data-received-form": "Nenhum dado recebido do formulário",
