Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -611,7 +611,7 @@
     "es-tax-exception-e6": "Spagna: eccezione per altro motivo",
     "es-tax-exception-location-rules": "Spagna: N2 Non soggetto – Regole di localizzazione dei servizi (artt. 69–70 LIVA, servizi B2B UE o extra UE)",
     "es-tax-exception-n1": "Operazioni interne esenti ai sensi dell'articolo 10.1 della Legge 20\/1991 dell'IGIC",
-    "es-tax-exception-n5": "Spagna: N5 Esente",
+    "es-tax-exception-n5": "Operazioni esenti per applicazione dell'articolo 25 della legge sull'IGIC",
     "es-tax-exception-passive-subject": "Spagna: N6 inversione del soggetto passivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
     "es-tax-regime-cash-criteria": "Criterio di cassa",
