Mejorada la búsqueda de huecos para identificar los que quedan fuera de rango.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -262,7 +262,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Ciudades",
     "city": "Ciudad",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Vymazat filtry",
     "click-link-to-add": "Puede añadir archivos desde la biblioteca, en el menú administrador.",
     "clone": "Duplicar",
     "clone-account-entry": "Duplicar el asiento contable",
@@ -728,6 +728,8 @@
     "full-access": "Acceso completo",
     "full-path": "Ruta completa",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "General",
     "general-concepts": "Conceptos generales",
     "general-data": "Datos generales",
