--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -728,6 +728,8 @@
     "full-access": "voller Zugriff",
     "full-path": "vollständigen Pfad",
     "gap-found": "L",
+    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "Allgemeines",
     "general-concepts": "Allgemeine Konzepte",
     "general-data": "allgemeine Informationen",
