--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -728,6 +728,8 @@
     "full-access": "Full access",
     "full-path": "Full path",
     "gap-found": "Gap found for number %numero%, day %fecha%, %codserie% and company %idempresa%",
+    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "General",
     "general-concepts": "General concepts",
     "general-data": "General data",
@@ -1705,7 +1707,6 @@
     "to-report": "Report",
     "today": "Today",
     "total": "Total",
-    "totaleuros": "Total Euros",
     "total-amount": "Total amount",
     "total-cost": "Total cost",
     "total-pending": "Total pending",
