--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -728,6 +728,8 @@
     "full-access": "Pełny dostęp",
     "full-path": "Pełna ścieżka",
     "gap-found": "Znaleziono lukę dla numeru %numero%, dnia %fecha%, %codserie% i firmy %idempresa%",
+    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "Ogólny",
     "general-concepts": "Ogólne pojęcia",
     "general-data": "Dane ogólne",
