--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -728,6 +728,8 @@
     "full-access": "Accés complet",
     "full-path": "Ruta sancera",
     "gap-found": "Buit trobat per al número %numero%, dia %fecha%, %codserie% i empresa %idempresa%",
+    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "General",
     "general-concepts": "Conceptes generals",
     "general-data": "Senyes generals",
@@ -1557,7 +1559,7 @@
     "sort-by-date-desc": "Ordenar per data desc.",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
     "sort-by-debit-desc": "Ordenar por debe descendente",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-asc": "Ordenar per descripció ascendent",
     "sort-by-description-desc": "Ordenar per descripció descendent",
     "sort-by-price-asc": "Ordenar per preu ascendent",
     "sort-by-price-desc": "Ordenar por precio descendente",
