--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -728,6 +728,8 @@
     "full-access": "Accés complet",
     "full-path": "Ruta completa",
     "gap-found": "Forat trobat per al número %numero%, dia %fecha%, %codserie% i empresa %idempresa%",
+    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "General",
     "general-concepts": "Conceptes generals",
     "general-data": "Dades generals",
