--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -728,6 +728,8 @@
     "full-access": "Acceso completo",
     "full-path": "Ruta completa",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
+    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "General",
     "general-concepts": "Conceptos generales",
     "general-data": "Datos generales",
@@ -1705,7 +1707,6 @@
     "to-report": "Informar",
     "today": "Hoy",
     "total": "Total",
-    "totaleuros": "Total Euros",
     "total-amount": "Suma total",
     "total-cost": "Coste total",
     "total-pending": "Total pendiente",
