--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -728,6 +728,8 @@
     "full-access": "accesso completo",
     "full-path": "Percorso completo",
     "gap-found": "Gap trovato per il numero %numero%, giorno %fecha%, %codserie% e azienda %idempresa%",
+    "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
+    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
     "general": "Generale",
     "general-concepts": "Concetti generali",
     "general-data": "informazioni generali",
