Solucionado fallo al actualizar los campos "dirty" del modelo al hacer changeId() y añadidos tests unitarios para este caso.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -729,7 +729,7 @@
     "full-path": "Ruta completa",
     "gap-found": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%",
     "gap-found-not-fillable": "Hueco encontrado para el número %numero%, día %fecha%, %codserie% y empresa %idempresa%, sin embargo no se va a rellenar.",
-    "gaps-out-of-range": "Se han encontrado %count% huecos que no se van a poder rellenar por estar a más de 1000 números del último.",
+    "gaps-out-of-range": "Bylo nalezeno %count% mezer, které nelze doplnit, protože jsou více než 1000 čísel od posledního.",
     "general": "General",
     "general-concepts": "Conceptos generales",
     "general-data": "Datos generales",
@@ -1553,7 +1553,7 @@
     "sort-by-code-asc": "Seřadit podle kódu vzestupně",
     "sort-by-code-desc": "Seřadit podle kódu sestupně",
     "sort-by-column": "Seřadit podle sloupce",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-asc": "Seřadit podle kreditu vzestupně",
     "sort-by-credit-desc": "Seřadit podle kreditu sestupně",
     "sort-by-date-asc": "Seřadit podle data vzestupně",
     "sort-by-date-desc": "Seřadit podle data sestupně",
