--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1391,7 +1391,7 @@
     "refunds": "Rückerstattungen",
     "register": "Registrieren",
     "register-install-ad": "Die Installation von FacturaScripts registrieren",
-    "register-install-ad-p": "Wenn Sie die Installation von FacturaScripts registrieren, erhalten Sie einen Monat PRO-Sponsoring, mit dem Sie eines unserer exklusiven Plugins herunterladen können. Außerdem hilft es uns, Statistiken über die Versionen des Kern- und PHP-Systems zu erstellen.",
+    "register-install-ad-p": "Registrieren Sie Ihre FacturaScripts-Installation und erhalten Sie einen Monat PRO-Sponsoring (nur beim ersten Mal). Sie können eines der exklusiven Plugins für Sponsoren herunterladen (siehe Liste der Sponsoren-Plugins).",
     "register-installation": "Instalation registrieren",
     "register-installation-p": "Registrieren Sie Ihre Installation, um kostenpflichtige oder private Plugins aktualisieren zu können.",
     "register-symbol": "#",
